[package]
name = "fast_paths"
version = "0.1.1-SNAPSHOT"
authors = ["easbar <easbar.mail@posteo.net>"]
edition = "2018"
description = "Fast shortest path calculations on directed graphs made possible by pre-processing the graph using Contraction Hierarchies"
repository = "https://github.com/easbar/fast_paths"
categories = ["algorithms", "data-structures", "science"]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "easbar/fast_paths", branch = "master" }

[dependencies]
bincode = "1.1.2"
serde = { version = "1.0", features =["derive"] }
log = "0.4"
rand = "0.6"
priority-queue = "0.6.0"

[dev-dependencies]
stopwatch = "0.0.7"
